k8s/dev/reputation-service/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: reputation-service-route
  namespace: dev
spec:
  parentRefs:
  - name: medicojob-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /reviews
    backendRefs:
    - name: reputation-service
      port: 5006
